@@ -99,3 +99,4 @@ Changes between Qt3 and Qt4 port (to be completed)
     null - false positive
 - add licence information about 3rd party icons
 - fixed: when creating new project, ok/cancel does not work
+- fixed: when creating a project, ktechlab crashes
